# yt-mcp

./: .dockerignore  .gitignore  .sweep-patterns.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: report.yml  test.yml
docs/adr/: 001-draft-based-issue-creation.md  002-deadline-control.md  003-translation-bilingual-and-tag-auto-exclude.md  004-demote-youtrack-4xx-to-warning.md  005-team-pulse.md  006-stuck-handoffs.md  007-normalized-issue-json.md  008-query-rewriter-and-instance-url.md  009-at-risk-field-matching-and-json.md  010-at-risk-qa-skip-signal.md  011-mcp-version-label-sync.md  012-attachment-upload.md  013-null-vs-missing-in-formatters.md  014-null-object-hardening-sweep.md  015-fix-regex-transform-mangle.md  016-create-issue-brace-preservation.md  017-create-issue-permission-errors.md  018-low-permission-project-resolution.md  020-command-brace-regression-guard.md  (+17 more)
scripts/: release.sh  sweep.sh  sync-mcp-label.py  teams.example.json  yt_report.py
tests/: test_at_risk.py  test_attachments.py  test_bulk.py  test_client_logging.py  test_config.py  test_dashboard.py  test_deadlines.py  test_errors.py  test_formatters.py  test_handoffs.py  test_hygiene.py  test_issues.py  test_journey.py  test_pulse.py  test_registration.py  test_resolver.py  test_risk_detection.py  test_scoring.py  test_server.py  test_sweep.py  test_sync_label.py  test_time_report.py  test_translate.py  test_work_items.py
(+40 files in other folders)
