[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yt-mcp"
version = "0.1.0"
description = "YouTrack MCP server for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0,<1.26.0",
    "httpx>=0.27.0",
]

[project.scripts]
yt-mcp = "yt_mcp.server:main"
