[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yt-mcp"
version = "0.1.0"
description = "YouTrack MCP server for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0,<1.26.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
yt-mcp = "yt_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
